<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<parent>
		<artifactId>Rings</artifactId>
		<groupId>com.almostrealism</groupId>
		<version>0.20</version>
	</parent>
	<modelVersion>4.0.0</modelVersion>

	<artifactId>shading</artifactId>

	<properties>
		<maven.compiler.source>14</maven.compiler.source>
		<maven.compiler.target>14</maven.compiler.target>
	</properties>

	<dependencies>
		<dependency>
			<groupId>com.almostrealism</groupId>
			<artifactId>engine</artifactId>
			<version>0.20</version>
		</dependency>
	</dependencies>
</project>